2015-07-22 Martin Grønholdt

* slighttp/http-response (http_process_response): Process request buffer entries.
* fs/index.html: Corrected toggle function.
* fs/zip.c (zip_file_hdr): More debug output.
*		   (init_zip): Fixed zero termination bug.
* slighttp/http.h: Added HTTP_REQUEST_BUFFER_SIZE.
* rest/net-names.c (rest_net_names_get_handler): Set request->response.message_size.
* net/tcp.c (tcp_send): Throw an error if already sending.
* slighttp/http.c (init_http): Init request buffer, fixed boolean error when calling tcp_listen.
* user_main.c (connected): Start the timer after the web server.
* slighttp/http-tcp.*: Added request buffer and response mutex.
* tools/ring.c (ring_pop_front): Fixed dereferencing void pointer. 
* slighttp/http-request.c (http_parse_headers): Print message when debugging.

2015-07-19 Martin Grønholdt

* rest/network.c (rest_network_put_handler): Handle status code properly.
* rest/net-passwd.c (rest_net_passwd_put_handler): Handle status code properly.
* rest/gpio.c (rest_gpio_put_handler): Handle status code properly.

2015-07-15 Martin Grønholdt

* Makefile: Added flashfs to only flash file system.
*		   (checkdirs): Added some missing directories.
* fs/index.html: Created on/of button.
* fs/admin.html: Removed file.
* rest/net-passwd.c(rest_net_passwd_put_handler): Proper handling of states.
*												: Process response at HTTP_STATE_ASSEMBLED to print CLF:
* rest/network.c (rest_network_put_handler): Proper handling of states.
*										   : Process response at HTTP_STATE_ASSEMBLED to print CLF:
* user_main.c (connected): Don't repeat message.
* net/wifi_connect.c (print_status): Nicer output.
* user_config.h: Fixed scope of db_mem_list and rearranged a bit.
* slighttp/http-common.c (print_clf_status): Renamed http_print_clf_status and reimplemented.
* slighttp/http-common.h: Changed renamed and changed print_clf_status as http_print_clf_status.
* slighttp/http.h (http_response): Added message_size.